<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nishanth.passwordgeneration.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pg_textViewTpc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:id="@+id/pg_textViewTRcount" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forThread"
        android:id="@+id/pg_textViewForThread"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pg_textViewTpc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/seekBar"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:text="@string/passwordlength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/pg_textViewTPL"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pg_textViewTPL"
        android:layout_alignRight="@+id/pg_textViewTRcount"
        android:layout_alignEnd="@+id/pg_textViewTRcount"
        android:id="@+id/pg_textViewTRL" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pg_textViewTPL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/seekBar2"
        android:max="16" />

    <TextView
        android:text="@string/selectpasswordcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/pg_textViewTpc"
        android:layout_below="@+id/pg_textViewForThread"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Fotasynctask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/pg_textViewForAsync"
        android:layout_below="@+id/seekBar2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/selectpasswordcount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pg_textViewForAsync"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/pg_textViewAPC" />

    <TextView
        android:text="@string/passwordlength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pg_textViewAPC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp"
        android:id="@+id/pg_textViewAPL" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pg_textViewAPC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/seekBar3"
        android:max="10" />

    <Button
        android:text="@string/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_generate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar4"
        android:layout_alignRight="@+id/pg_textViewARC"
        android:layout_alignEnd="@+id/pg_textViewARC"
        android:id="@+id/pg_textViewARL" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pg_textViewARC"
        android:layout_above="@+id/seekBar3"
        android:layout_toLeftOf="@+id/pg_textViewTRL"
        android:layout_toStartOf="@+id/pg_textViewTRL" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar4"
        android:layout_below="@+id/pg_textViewAPL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:max="16" />
</RelativeLayout>
